[package]
name = "rustan"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Sharihin <anihirash@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"
bytes = "1.1.0"
int-enum = "0.4.0"
tokio = { version = "1", features = ["full"] }
