[package]
name = "rustan"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Sharihin <anihirash@gmail.com>"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"
bytes = "1.1.0"
int-enum = "0.4.0"
url = "2.2.2"
urlencoding = "2.1.0"
is_executable = "1.0.1"
mime_guess = "2.0.4"
tokio = { version = "1.17.0", features = ["full"] }
config = "0.13.1"
lazy_static = "1.4.0"